kustomize/oauth2-proxy/kustomization/overlays/ingress/ingress-oauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-oauth
spec:
  rules:
  - host: app.example.com
    http:
      paths:
      - backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
        path: /oauth2
        pathType: Prefix
  tls:
  - hosts:
    - app.example.com
    secretName: demo-example-tls
