kustomize/oauth2-proxy/kustomization/overlays/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
  name: demo-app
spec:
  rules:
  - host: app.example.com
    http:
      paths:
      - backend:
          service:
            name: demo-app
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - app.example.com
    secretName: demo-example-tls
